--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.servlet.multipart.max-request-size=100MB
 logging.file.path=/Users/alina/Documents
 
 springdoc.swagger-ui.path=/doc
+
+management.endpoints.web.exposure.include=info,env,shutdown,mappings,beans
