--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.url=jdbc:postgresql://localhost:5432//beauty_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/beauty_db
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
