Basic security completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/beauty_db
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 logging.file.path=/Users/alina/Documents
+server.servlet.session.timeout=60s
 springdoc.swagger-ui.path=/doc
 management.endpoints.web.exposure.include=info,env,shutdown,mappings,beans
